Fix: Corrección z-index y estilos en faq

--- a/src/styles/home/faq/faq.module.scss
+++ b/src/styles/home/faq/faq.module.scss
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 8rem 0;
+    margin: 8rem 0 13rem 0;
     gap: 1rem;
 
     & > p {
@@ -19,8 +19,9 @@
         flex-direction: column;
         padding: 2rem;
         border-radius: 2rem;
-        z-index: 1000;
         background-color: #0A0A0A;
+        z-index: 1;
+        cursor: pointer;
         &.show {
             .question svg {
                 transform: rotate(90deg);
@@ -34,7 +35,6 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            cursor: pointer;
             &>p {
                 font-weight: bold;
             }
@@ -57,7 +57,6 @@
             transition: max-height 0.3s, margin 0.3s;
             p, a {
                 text-align: start;
-                z-index: 2;
             }
 
             a {
